# cpbl-analytics

./: .env.example  .gitignore  APPLICATION_EMAIL.md  CLAUDE.md  COVER_LETTER.md  Dockerfile  INTERVIEW_PREP.md  README.md  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml  daily-update.yml  daily-update.yml.disabled  deploy.yml
dashboard/static/: _redirects  api-docs.html  architecture.html  article-babip-2025.html  article-clutch-2025.html  article-fatigue-2025.html  article-lob-2025.html  article-park-factor-2025.html  article-splits-2025.html  article-wrc-plus-2025.html  babip.html  clutch.html  counts.html  fatigue.html  index.html  lob.html  park-factors.html  player.html  rebas-review.html  splits.html  wrc-plus.html
scripts/: calc_babip_regression.py  calc_count_heatmap.py  calc_half_splits.py  calc_park_factors.py  calc_rolling_woba.py  calc_wrc_plus.py  export_static.py  seed_cpbl.py  seed_rebas.py
src/analysis/: count_splits.py  leverage.py  lob_pct.py  pitcher_fatigue.py
src/api/: app.py  deps.py
src/api/routes/: analysis.py  games.py  players.py
src/api/schemas/: responses.py
src/config/: settings.py
src/db/: engine.py
src/etl/: cpbl_client.py  rebas_loader.py
src/utils/: constants.py  run_expectancy.py
tests/: conftest.py  test_api_endpoints.py  test_calc_babip_regression.py  test_calc_count_heatmap.py  test_calc_half_splits.py  test_calc_park_factors.py  test_calc_rolling_woba.py  test_count_splits.py  test_leverage.py  test_lob_pct.py  test_pitcher_fatigue.py  test_run_expectancy.py
(+299 files in other folders)
